# cpp-practices

./: README.md
documents/: cppClassConstructor.md  cppClassConstructorAdvance.md  cppIntengentPointer.md  cppMemoryMange.md  cppReference.md
documents/languageUsage/: cppUnlimitedArguments.md
documents/memoryMange/: allocator.md  dynamicArray.md
documents/stdLibrary/: inputStream.md
projects/DyMemoryAndIntellengentPointer/: CMakeLists.txt  main.cpp
projects/HouJiePrac/: CMakeLists.txt
projects/HouJiePrac/BasicClass/: complex-test.cpp  complex.h
projects/HouJiePrac/ClassWithPointer/: mystring.h  string-test.cpp
projects/HouJiePrac/Extension/: staticSample.cpp
projects/HouJiePrac/oop/: templateMethod.cpp  testInhAddCompose.cpp
projects/HouJiePrac/oop/Composite/: shapes.cpp  shapes.h
projects/HouJiePrac/oop/prototypeDesignPattern/: Image.h  ImageChildren.h  main.cpp
projects/IoLibUsage/: CMakeLists.txt  main.cpp
projects/SalaryPayment/: CMakeLists.txt  README.MD
projects/SalaryPayment/Implement_lib/: AddEmployeeTransaction.cpp  AddEmployeeTransaction.h  CMakeLists.txt  PayrollDatabase.cpp  PayrollDatabase.h  Transaction.h
projects/SalaryPayment/Implement_lib/uml/: addEmployee.puml  addEmployeeTransaction.puml  kernelModel.puml
projects/classUsage/: CMakeLists.txt  friendUsage.cpp
projects/copyControl/: 13-11.cpp  13-13.cpp  13-15.cpp  13-18-19.cpp  13-5.cpp  13-8.cpp  CMakeLists.txt  hello.exe.stackdump
projects/cpp-pointer/: CMakeLists.txt  customStrBlob.cpp  customStrBlob.h  customStrBlobPtr.cpp  customStrBlobPtr.h  main.cpp
(+36 files in other folders)
